--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "babel-plugin-prismjs": "^1.0.2",
     "core-js": "^2.6.5",
+    "element-ui": "^2.4.5",
+    "js-cookie": "^2.2.0",
+    "prismjs": "^1.16.0",
+    "simple-crypto-js": "^2.0.2",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
@@ -20,8 +27,15 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.2",
+    "prerender-spa-plugin": "^3.2.1",
     "sass-loader": "^7.1.0",
+    "svgo": "^1.1.0",
+    "svgo-loader": "^2.1.0",
+    "vue-cli-plugin-element": "^1.0.1",
+    "vue-cli-plugin-prerender-spa": "^1.1.5",
+    "vue-cli-plugin-pug": "^1.0.7",
+    "vue-cli-plugin-svg-sprite": "^1.0.0",
     "vue-template-compiler": "^2.5.21"
   }
 }
